# llm-engine-benchmark

./: .env.example  .gitignore  CITATION.cff  PROJECT_MANIFEST.sha256  README.md  THIRD_PARTY.md  bench  pyproject.toml
.github/workflows/: ci.yml
assets/charts/: README.md  portfolio-chart-provenance.json  provenance.json  tensorrt_cache_benefit_data.csv  warm_shared_chart_data.csv
config/: default.yaml  tensorrt-llm-smoke.yaml
docs/: DESIGN_MAPPING.md  RESULT_SCHEMA.md  architecture.md  fairness-and-limitations.md  methodology.md  paper-outline.md  production-recommendations.md  profiling.md  results.md
reports/: benchmark-report.md  executive-summary.md
results/: README.md
results/sample/: example-run-metadata.json
results/summaries/: combined-summary.csv  sglang-summary.csv  tensorrt-llm-summary.csv  vllm-summary.csv
scripts/: full_benchmark.sh  generate_charts.py  smoke_test.sh
src/llm_engine_benchmark/: __init__.py  cli.py  client.py  config.py  datasets.py  default.yaml  environment.py  locking.py  metrics.py  normalize.py  orchestrator.py  report.py  ruler.py  server.py  telemetry.py  util.py  validate.py
tests/: test_cli.py  test_client.py  test_config.py  test_datasets.py  test_locking.py  test_normalize.py  test_orchestrator.py  test_report.py  test_ruler.py  test_server.py  test_util.py
