[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-engine-benchmark"
version = "0.1.0"
description = "Neutral, reproducible long-context serving benchmark for SGLang, vLLM, and TensorRT-LLM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Venkata Rami Reddy Kallu"}]
dependencies = [
  "aiohttp>=3.10,<4",
  "datasets>=3.2,<5",
  "huggingface-hub>=0.27,<2",
  "psutil>=6,<8",
  "PyYAML>=6,<7",
  "tokenizers>=0.21,<1",
  "transformers>=4.48,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "build>=1.2,<2",
]

[project.scripts]
llm-engine-benchmark = "llm_engine_benchmark.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_engine_benchmark = ["default.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
